--- a/mbta/index.html
+++ b/mbta/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="utf-8">
     	<meta name="viewport" content="initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" type="text/css" />
-    	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbQKmewBFyICkdY2XCgSiQnWhBMzc7jRo&callback=initMap"async defer></script>
+    	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbQKmewBFyICkdY2XCgSiQnWhBMzc7jRo&callback=initMap"></script>
 		<title>MBTA Red Line Schedule</title>
 	</head>
 
@@ -12,3 +13,4 @@
     	<div id="map"></div>
     	<script src="script_mbta.js"></script>
 	</body>
+</html>
