mentioning burp suite

--- a/security/index.html
+++ b/security/index.html
@@ -18,6 +18,8 @@
 
 		<p>The second testing method was the white box, which involved looking at the source code and determining if there are any visible vulnerabilities that way. This method can pick up on flaws missed by the black box method because the tester can now see exactly how each process is performed, which is not visible strictly from the user interface.</p>
 
+		<p>The third method was using Burp Suite to manipulate data while in the process of being sent to the browser. Burp Suite uses a proxy to intercept HTTP requests allowing users to edit the data and parameters before it is sent, and then they can to the same to the response.</p>
+
 		<p>The final method used was performing a static scan on the application. This was done using <a href="https://analysiscenter.veracode.com/auth/index.jsp">Veracode</a>, which analyzes all of the source code for an application and highlights any flaws or other security warnings. Static scans are good at picking up on smaller details that might not be apparent to the tester, even when reading the source code.</p>
 
 		<h2>Abstract of Findings</h2>
